** echart uses new default colors, ensure to set colors in your projects and don't rely on default coloring
** Due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar
** Grid pagination/action buttons are now in divs, so you may need to check your styling
** Moved QuickEdit to package bcdui.widgetNg
** createFixedTableHeader uses new css classes, ensure your theme includes them
* Config
** In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml
** Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
** Use Server/configFiles/log4j2.xml (instead of log4j.properties)
** Wrq2SqlServlet has restricted access permissions now requiring bcdAdmin:ImplementationDetails as it reveals implementation details (actual names of db objects)
** bindingItem skipWriteCheck attribute (to bypass subject settings write checks) was removed. Use the new mode (R|W|RW) attribute on SubjectFilterType instead

.All versions of 3rd party libraries for runtime, are listed in
* bcdui_dependencies.gradle for java
* gradle.properties for javascript

.Build:
* Updated to gradle 7.0, including switching to com.github.node-gradle.node plugin and node-js version 12.13 (LTS)
* Updated to babel-js, node-sass and jsdoc, see build_package.json

.Core:
* _getFillParams which is used in read, write, query, queryNodes can handle xPaths with * now

.Server:
* new SubjectFilterType mode attribute to specify how this filter type should be enabled. on read, write of both (default)

.Components:
* Grid
** use div container
** new option defaultButtons=true to show/hide action button
** allow button actions to be triggered via bcdGrid:save, bcdGrid:reset, bcdGrid:addRow on targetHtml
** fix grouped headers to not clip long cells
** bcduiInputField editor follows handsongrid's cell movement rules, closes correctly on identical values

* DocUploader